# crushline

./: .gitignore  CMakeLists.txt  README.md
assets/fonts/: README.md
docs/: game-design.md  graph-model.md  rendering-model.md  style-target.md  ui-model.md
scripts/: run.sh  test.sh
src/: main.cpp
src/app/: App.cpp  App.h  DashboardLayout.cpp  DashboardLayout.h
src/core/: Color.h  Id.h  Math.h  Rect.h  Types.h
src/editor/: GraphView.cpp  GraphView.h
src/graph/: GraphDocument.cpp  GraphDocument.h  GraphEvaluator.cpp  GraphEvaluator.h  GraphSerializer.cpp  GraphSerializer.h  GraphTypes.h  MachineCatalog.cpp  MachineCatalog.h  ProductionEvaluator.cpp  ProductionEvaluator.h  ProductionTypes.h  RecipeCatalog.cpp  RecipeCatalog.h  ResourceCatalog.cpp  ResourceCatalog.h  SampleGraph.cpp  SampleGraph.h  ScenarioCatalog.cpp  ScenarioCatalog.h
src/platform/: Input.h  Time.cpp  Time.h  Window.cpp  Window.h
src/production/: ProductionGraphMetadata.cpp  ProductionGraphMetadata.h
src/renderer/: DrawCommand.h  FontAtlas.cpp  FontAtlas.h  Renderer2D.cpp  Renderer2D.h  Texture.cpp  Texture.h
src/ui/: Theme.cpp  Theme.h
tests/: GraphConnectionTest.cpp  GraphEvaluatorTest.cpp  GraphRecipeNodeTest.cpp  GraphSerializerRoundTrip.cpp  ProductionCatalogTest.cpp  ProductionEvaluatorTest.cpp  ProductionGraphMetadataTest.cpp  ScenarioCatalogTest.cpp
