cmake_minimum_required(VERSION 3.22)

project(crushline_ui LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include(FetchContent)

set(SDL_SHARED OFF CACHE BOOL "" FORCE)
set(SDL_STATIC ON CACHE BOOL "" FORCE)
set(SDL_TEST_LIBRARY OFF CACHE BOOL "" FORCE)

FetchContent_Declare(
    SDL3
    GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
    GIT_TAG release-3.2.0
    GIT_SHALLOW TRUE
)

FetchContent_MakeAvailable(SDL3)

find_package(OpenGL REQUIRED)

add_executable(crushline
    src/main.cpp
    src/app/App.cpp
    src/platform/Window.cpp
    src/platform/Time.cpp
)

target_include_directories(crushline PRIVATE src)

target_link_libraries(crushline PRIVATE
    SDL3::SDL3
    OpenGL::GL
)

if (MSVC)
    target_compile_options(crushline PRIVATE /W4)
else()
    target_compile_options(crushline PRIVATE -Wall -Wextra -Wpedantic)
endif()
